feat: day 15 part one fix